--- a/CSS/Styles.scss
+++ b/CSS/Styles.scss
@@ -115,7 +115,7 @@ form .btn {
 }
 
 .bg_main_page {
-    background-image: linear-gradient(270deg, #3D3D3C 0%, rgba(61, 61, 60, 0.2) 100%), url(../IMG/bg_main.png);
+    background-image: linear-gradient(270deg, #3D3D3C 0%, rgba(61, 61, 60, 0.2) 100%), url(../IMG/bgMain.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -290,7 +290,7 @@ h3 {
 }
 
 .news_bg {
-    background-image: url(../IMG/Secondary_bg.png);
+    background-image: url(../IMG/SecondaryBg.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
